<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_shutter_button"
        android:title="@string/menu_shutter_button"
        android:orderInCategory="80"
        android:showAsAction="always" />
    <item android:id="@+id/menu_load_and_correct"
        android:title="@string/menu_load_and_correct"
        android:icon="@android:drawable/ic_menu_crop"
        android:orderInCategory="90"
        android:showAsAction="never" />
    <item android:id="@+id/menu_image_check"
        android:title="@string/menu_image_check"
        android:icon="@android:drawable/ic_menu_gallery"
        android:orderInCategory="91"
        android:showAsAction="never" />
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
